--- a/app/src/main/res/menu/menu_app_bar.xml
+++ b/app/src/main/res/menu/menu_app_bar.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/favorite"
+        android:id="@+id/delete"
 
-        android:title="favortio"
+        android:title="delete"
         android:contentDescription="descripcion"
         app:showAsAction="ifRoom" />
 
