--- a/app/src/main/res/menu/context_bar.xml
+++ b/app/src/main/res/menu/context_bar.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/favorite"
+        android:id="@+id/delete"
         android:contentDescription="descripcion"
         android:title="favortio"
         app:showAsAction="ifRoom" />
