--- a/app/src/main/res/menu/menu_app_bar.xml
+++ b/app/src/main/res/menu/menu_app_bar.xml
@@ -2,11 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/add"
+        android:icon="@drawable/add"
+        android:title="add"
+        android:contentDescription="descripcion"
+        app:actionViewClass="androidx.appcompat.widget.AppCompatImageButton"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/delete"
-
+        android:icon="@drawable/cubo_de_basura"
         android:title="delete"
         android:contentDescription="descripcion"
-        app:showAsAction="ifRoom" />
+        app:actionViewClass="androidx.appcompat.widget.AppCompatImageButton"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/search"
@@ -14,7 +22,7 @@
         android:title="SEARCH"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         android:contentDescription="des2"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/more"
